tests/wpt/tests/third_party/test262/test/language/line-terminators/S7.3_A2.1_T2.js
// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: LINE FEED (U+000A) within strings is not allowed
es5id: 7.3_A2.1_T2
description: Use real LINE FEED into string
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

//CHECK#1
"
str
ing
";
